k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpu-heavy-service-orca
spec:
  selector:
    app: cpu-heavy-app
  ports:
  - port: 8080
    targetPort: 8080
