k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cpu-heavy-route-orca
spec:
  parentRefs:
  - name: external-gateway-orca
  rules:
  - backendRefs:
    - name: cpu-heavy-service-orca
      port: 8080
